--- a/index.html
+++ b/index.html
@@ -2,14 +2,19 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
+    <title>Anéis Olímpicos Animados</title>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projetos Aptos - Lei de Incentivo ao Esporte</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Kreon:wght@700&family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
 </head>
+  
 <body>
-    <div class="container">
-        <h1>Projetos Aptos - Lei de Incentivo ao Esporte</h1>
+  <div class="container">
+    <canvas id="olympicRings"></canvas>
+    <script src="script.js"></script>
+   <h1>Projetos Aptos - Lei de Incentivo ao Esporte</h1>
         <div class="form-group">
             <label for="manifestacao">Escolha a Manifestação Desportiva:</label>
             <select id="manifestacao" class="dropdown">
