--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         <!-- Botão de pesquisa sempre visível -->
         <div id="botao-pesquisa">
-            <button id="obterDados" class="btn">🔍 Pesquisar</button>
+            <button id="obterDados" class="btn">🔍 Obter deliberação e cnpj</button>
         </div>
         <!-- Botões de resultados iniciais ocultos -->
         <div id="resultados" class="hidden">
