--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
         <!-- Ícone dos anéis olímpicos girando -->
         <div class="olympic-rings"> <!-- Div para os ícones dos anéis olímpicos -->
-            <img src="https://cdn-icons-png.flaticon.com/128/523/523676.png" alt="Anéis Olímpicos" class="rings-icon"> <!-- Primeiro ícone dos anéis -->
-            <img src="https://cdn-icons-png.flaticon.com/128/10573/10573812.png" alt="Anéis Olímpicos" class="rings-icon"> <!-- Segundo ícone dos anéis -->
+            <img src="https://raw.githubusercontent.com/marioluciofjr/projetos_aptos_LIE/fcd465517abf1cd8b41a7f03a00219d1494dba4c/Imagens/olympic.svg" alt="Jogos Olímpicos" class="rings-icon"> <!-- Logo dos Jogos Olímpicos -->
+            <img src="https://raw.githubusercontent.com/marioluciofjr/projetos_aptos_LIE/fcd465517abf1cd8b41a7f03a00219d1494dba4c/Imagens/paralympic.svg" class="rings-icon"> <!-- Logo dos Jogos Paralímpicos -->
         </div>
 
         <div class="header"> <!-- Cabeçalho da página -->
